--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       display: flex;
+      flex-wrap: wrap; /* Allow flex items to wrap */
     }
 
     .form-container {
-      width: 300px; /* Set width of form container */
-      position: fixed;
-      top: 20px;
-      left: 20px; /* Adjust as needed */
+      width: 100%; /* Full width on small screens */
+      max-width: 400px; /* Limit width on larger screens */
+      margin: 20px;
       padding: 20px;
       border-radius: 8px;
       background-color: #fff;
@@ -34,9 +34,20 @@
 
     .list-container {
       flex: 1;
-      margin-left: 340px; /* Adjust to accommodate the fixed form container */
       padding: 20px;
     }
+
+    @media only screen and (min-width: 768px) {
+      .form-container {
+        width: 40%; /* Adjust width for larger screens */
+      }
+
+      .list-container {
+        margin-left: 20px; /* Add margin for spacing */
+      }
+    }
+
+    /* Add additional media queries as needed */
 
     h1 {
       text-align: center;
@@ -120,21 +131,23 @@
       margin-left: 10px;
     }
 
-    .delete-button {
-      position: absolute;
-      top: -7px;
-      right: -390px;
-      background: none;
-      border: none;
-      cursor: pointer;
-      font-size: 20px;
-      color: #888;
-      transition: color 0.1s;
-    }
+.delete-button {
+  position: absolute; /* Set absolute positioning */
+  top: 10px;
+  right: -310px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  color: #888;
+  transition: color 0.1s;
+}
 
-    .delete-button:hover {
-      color: black;
-    }
+.delete-button:hover {
+  color: black;
+}
+
+
   </style>
 </head>
 <body>
