--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
       border-radius: 8px;
       background-color: #fff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      
+
     }
 
     .list-container {
       flex: 1;
-      padding: 20px;
+      padding: 30px 10px 0px 460px;
+      
+
     }
 
     @media only screen and (min-width: 768px) {
